--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     },
     "dependencies": {
         "body-parser": "1.19.0",
-        "express": "4.17.1"
+        "express": "4.17.1",
+        "mssql": "6.3.1",
+        "mysql": "2.18.1",
+        "tedious": "11.0.6"
     }
 }
