--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "body-parser": "1.19.0",
         "express": "4.17.1",
         "mssql": "6.3.1",
+        "multer": "1.4.2",
         "mysql": "2.18.1",
         "tedious": "11.0.6"
     }
