--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "concurrently": "^4.0.1"
     },
     "dependencies": {
+        "@material-ui/icons": "4.11.2",
         "body-parser": "1.19.0",
         "express": "4.17.1",
         "mssql": "6.3.1",
